test/testData/parser/negative/expressions/binVoid.c
void test2() { }

int main() {
  if (test2() != 1) return 10;

  return 0;
}
