test/testData/parser/negative/expressions/binVoid.err
test/testData/parser/negative/expressions/binVoid.c:4:7: error: void value not ignored as it ought to be
